ajustando criação de transação